syntax = "proto3";

package yandex.cloud.priv.lzy.v1;

import "yandex/cloud/lzy/v1/lzy-iam.proto";

option go_package = "lzy";
option java_outer_classname = "LSS";
option java_package = "yandex.cloud.priv.lzy.v1";

service LzySubjectService {
  rpc CreateSubject (CreateSubjectRequest) returns (yandex.cloud.lzy.v1.Subject);

  rpc RemoveSubject (RemoveSubjectRequest) returns (RemoveSubjectResponse);

  rpc AddCredentials (AddCredentialsRequest) returns (AddCredentialsResponse);

  rpc RemoveCredentials (RemoveCredentialsRequest) returns (RemoveCredentialsResponse);
}

message CreateSubjectRequest {
  string name = 1;
  string auth_provider = 2;
  string provider_user_id = 3;
}

message RemoveSubjectRequest {
  yandex.cloud.lzy.v1.Subject subject = 1;
}

message RemoveSubjectResponse {
}

message AddCredentialsRequest {
  yandex.cloud.lzy.v1.Subject subject = 1;
  yandex.cloud.lzy.v1.Credentials credentials = 2;
}

message AddCredentialsResponse {
}

message RemoveCredentialsRequest {
  yandex.cloud.lzy.v1.Subject subject = 1;
  string credentials_name = 2;
}

message RemoveCredentialsResponse {
}